--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -332,7 +332,7 @@ Full-Width Styles
   height:70px;
   text-indent: -5000px;
   overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
+  background: url(https://cloud.githubusercontent.com/assets/16169389/11610244/b32b9670-9b51-11e5-8107-743f22c072ca.png) no-repeat bottom left;
 }
 
 .tar_download_link {
@@ -342,16 +342,16 @@ Full-Width Styles
   height:70px;
   text-indent: -5000px;
   overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
+  background: url(https://cloud.githubusercontent.com/assets/16169389/11610244/b32b9670-9b51-11e5-8107-743f22c072ca.png) no-repeat bottom right;
   margin-left: 10px;
 }
 
 .zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
+  background: url(https://cloud.githubusercontent.com/assets/16169389/11610244/b32b9670-9b51-11e5-8107-743f22c072ca.png) no-repeat top left;
 }
 
 .tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
+  background: url(https://cloud.githubusercontent.com/assets/16169389/11610244/b32b9670-9b51-11e5-8107-743f22c072ca.png) no-repeat top right;
 }
 
 #main_content_wrap {
